cmake_minimum_required(VERSION 2.8)
PROJECT(Xan_viewer)
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_ROOT is" ${CMAKE_ROOT})
MESSAGE(STATUS "CMAKE_SYSTEM_NAME is " ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS "CMAKE_INSTALL_PREFIX is: " ${CMAKE_INSTALL_PREFIX})
INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/dynamechs/dm  ${CMAKE_INSTALL_PREFIX}/dynamechs/dmu ${CMAKE_INSTALL_PREFIX}/dynamechs/dmgl )
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/dynamechs/lib)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
MESSAGE(STATUS "Adding Mac hooks (tested with OSX 10.7)")
SET(CMAKE_CXX_FLAGS "-isysroot /Developer/SDKs/MacOSX10.6.sdk")
SET(CMAKE_SHARED_LINKER_FLAGS "-lglut -L/usr/X11/lib")
SET(CMAKE_EXE_LINKER_FLAGS "-lglut -L/usr/X11/lib")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

find_package(GLUT)
find_package(OpenGL)
MESSAGE(STATUS "OpenGL library path: " ${OPENGL_LIBRARIES})
MESSAGE(STATUS "GLUT library path: " ${GLUT_LIBRARIES})
MESSAGE(STATUS "OpenGL headers path: " ${OPENGL_INCLUDE_DIR})
MESSAGE(STATUS "GLUT headers path: " ${GLUT_INCLUDE_DIR})

SET(XAN_VIEWER_SRC  xan_viewer.cpp )
ADD_EXECUTABLE(xan_viewer ${XAN_VIEWER_SRC})
TARGET_LINK_LIBRARIES(xan_viewer ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl)

INSTALL(TARGETS xan_viewer
                 RUNTIME DESTINATION bin)
set_target_properties(xan_viewer PROPERTIES 
                      INSTALL_RPATH_USE_LINK_PATH TRUE)

